@@ -6,7 +6,9 @@ See COPYING for copying conditions.
 Please send bfast bug reports to nhomer@cs.ucla.edu
 
 Version 0.1.12
-* Optimized part of bmatches procedure.
+* bevalsim now takes in any bmf or baf file.
+* Optimized part of bmatches procedure.  Both forward and reverse
+matches wil count towards maxKeyMatches (-K).
 * Updated bpreprocess help message.
 * Updated bindexhist and bindexdist for color space.
 
